<resources>
    <string name="app_name">배달 자동 콜</string>
    <string name="accessibility_service_description">배달 앱의 콜을 자동으로 수락/거절하는 서비스입니다. 설정한 조건에 따라 콜을 자동으로 처리합니다.</string>
    
    <!-- 메인 화면 -->
    <string name="service_status">서비스 상태</string>
    <string name="service_on">켜짐</string>
    <string name="service_off">꺼짐</string>
    <string name="enable_service">서비스 활성화</string>
    
    <!-- 콜비 설정 -->
    <string name="call_price_settings">콜비 설정</string>
    <string name="single_call">1건</string>
    <string name="double_call">2건</string>
    <string name="triple_call">3건</string>
    <string name="minimum_price">최소 금액</string>
    <string name="won">원</string>
    
    <!-- 거리 설정 -->
    <string name="distance_settings">거리 설정</string>
    <string name="maximum_distance">최대 거리</string>
    <string name="km">km</string>
    
    <!-- 블랙리스트 -->
    <string name="blacklist_settings">블랙리스트 설정</string>
    <string name="manage_blacklist">블랙리스트 관리</string>
    <string name="add_blacklist_area">금지구역 추가</string>
    
    <!-- 지도 화면 -->
    <string name="map_title">블랙리스트 지역 관리</string>
    <string name="draw_area">영역 그리기</string>
    <string name="save_area">영역 저장</string>
    <string name="delete_area">영역 삭제</string>
    <string name="area_name">영역 이름</string>
    
    <!-- 권한 관련 -->
    <string name="permission_required">권한이 필요합니다</string>
    <string name="accessibility_permission">접근성 권한을 허용해주세요</string>
    <string name="location_permission">위치 권한을 허용해주세요</string>
    <string name="overlay_permission">다른 앱 위에 그리기 권한을 허용해주세요</string>
    
    <!-- 버튼 -->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="settings">설정</string>
</resources>